--- a/index.html
+++ b/index.html
@@ -50,16 +50,17 @@
                 <a href="#" class="border">Home</a>
             </li>
             <li>
-                <a href="#" class="border borderStaff">Staff</a>
+                <a href="#" id="staffMenu" data-nome="staff" class="border borderStaff">Staff</a>
             </li>
             <li>
                 <a href="https://www.instagram.com/rmcentertraining"><img src="../onlineGym/imagens/rm-logo.png" alt=""></a>
             </li>
             <li>
-                <a href="#" class="border">Estrutura</a>
+                <a href="#" id="estruturaMenu" class="border">Estrutura</a>
             </li>
+            
             <li>
-                <a href="#" class="border">Contato</a>
+                <a href="contatorm.html" id="contatoMenu" class="border">Contato</a>
             </li>
         </ul>
     </nav>
@@ -158,7 +159,7 @@
         <p>
             Nosso espaço é dividido em duas área,o primeiro espaço todo estruturado e voltado para as aulas de levantamento de peso,contamos com 6 plataformas e anilhas específicas voltadas para o levantamento de peso, para que possamos proporcionar uma melhor experiencia do levantamento de peso para nossos alunos,além de ter um segundo espaço voltado e equipado para as atividades de Crosstraining, tudo isso em um só lugar visando sempre a comodidade para os nossos alunos. 
         </p>
-        <a href="../onlineGym/estrutura.html" class="vejaMais">Veja mais</a>
+        <a href="../onlineGym/estruturafotos.html" class="vejaMais">Veja mais</a>
     </div>
 
     <div id="videoRose">
@@ -168,6 +169,23 @@
 
     </div>
    
+</section>
+
+<section  id="horários">
+    <main>
+        <h1>Horários Cross</h1>
+        <div>
+            <div>
+                dia
+            </div>
+            <div>
+                Horário
+            </div>
+        </div>
+    </main>
+    <main>
+
+    </main>
 </section>
 
 <footer>
