--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
     <div  id="nossoEspaco">
         <h1>
-            Nossa estrutura
+            Nossa estrutura <hr class="hrcross">
         </h1>
         <p>
             Nosso espaço é dividido em duas área,o primeiro espaço todo estruturado e voltado para as aulas de levantamento de peso,contamos com 6 plataformas e anilhas específicas voltadas para o levantamento de peso, para que possamos proporcionar uma melhor experiencia do levantamento de peso para nossos alunos,além de ter um segundo espaço voltado e equipado para as atividades de Crosstraining, tudo isso em um só lugar visando sempre a comodidade para os nossos alunos. 
@@ -171,21 +171,19 @@
    
 </section>
 
-<section  id="horários">
-    <main>
-        <h1>Horários Cross</h1>
-        <div>
-            <div>
-                dia
-            </div>
-            <div>
-                Horário
-            </div>
-        </div>
-    </main>
-    <main>
+<section  id="horarios">
 
-    </main>
+    <h1>Nossos Horários</h1><hr class="hrcross">
+    
+    <div class="flex">
+        <main id="horarioCross">        
+            <img src="../onlineGym/imagens/horariocross.jpg" alt="">
+        </main>
+        <main id="horarioLpo">
+            <img src="../onlineGym/imagens/horariolpo.jpg" alt="">
+        </main>
+    </div>    
+
 </section>
 
 <footer>
