--- a/estruturafotos.html
+++ b/estruturafotos.html
@@ -52,13 +52,13 @@
                     <a href="index.html" class="border">Home</a>
                 </li>
                 <li>
-                    <a href="#" id="staffMenu" data-nome="staff" class="border borderStaff">Staff</a>
+                    <a href="index.html" id="staffMenu" data-nome="staff" class="border borderStaff">Staff</a>
                 </li>
                 <li>
                     <a href="https://www.instagram.com/rmcentertraining"><img src="../onlineGym/imagens/rm-logo.png" alt=""></a>
                 </li>
                 <li>
-                    <a href="#" id="estruturaMenu" class="border">Estrutura</a>
+                    <a href="#" id="estruturafotos.html" class="border">Estrutura</a>
                 </li>
                 
                 <li>
@@ -69,7 +69,28 @@
     </header>
 
     <section id="estruturaFotos">
-            <h1>Teste</h1>
+            <h1>Galeria de fotos</h1><hr class="hrcross">
+            <div id="galeriaImagens">
+               <img src="../onlineGym/imagens/local.png" alt="" id="estruturaImg1">
+               <img src="../onlineGym/imagens/espaco2.jpg" alt="" id="estruturaImg2">
+               <img src="../onlineGym/imagens/vestiario.jpg" alt="" id="estruturaImg3">
+               <img src="../onlineGym/imagens/espaco6.jpg" alt="" id="estruturaImg4">
+            </div>
+            <div id="imagemGrande">
+                <img src="" alt="" id="imgGrande">
+                <i class="fas fa-angle-double-left left"></i>
+                <i class="fas fa-angle-double-right right"></i>
+                <i class="far fa-window-close close"></i>
+
+            </div>
     </section>
+
+    <footer>
+        <p>
+            Site desenvolvido por DStech Studios
+        </p>
+    </footer>
+
+    <script  type="text/javascript"  src="vanilla-tilt.js"></script>
 </body>
 </html>
