--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                 
             </li>
             <li>
-                <a href="#" class="border">Home</a>
+                <a href="index.html" id="homeMenu" class="border">Home</a>
             </li>
             <li>
-                <a href="#" id="staffMenu" data-nome="staff" class="border borderStaff">Staff</a>
+                <a href="index.html" id="staffMenu" data-nome="staff" class="border borderStaff">Staff</a>
             </li>
             <li>
                 <a href="https://www.instagram.com/rmcentertraining"><img src="../onlineGym/imagens/rm-logo.png" alt=""></a>
