--- a/contatorm.html
+++ b/contatorm.html
@@ -49,13 +49,13 @@
                     <a href="index.html" class="border">Home</a>
                 </li>
                 <li>
-                    <a href="#" id="staffMenu" data-nome="staff" class="border borderStaff">Staff</a>
+                    <a href="index.html" id="staffMenu" data-nome="staff" class="border borderStaff">Staff</a>
                 </li>
                 <li>
                     <a href="https://www.instagram.com/rmcentertraining"><img src="../onlineGym/imagens/rm-logo.png" alt=""></a>
                 </li>
                 <li>
-                    <a href="#" id="estruturaMenu" class="border">Estrutura</a>
+                    <a href="estruturafotos.html" id="estruturaMenu" class="border">Estrutura</a>
                 </li>
                 <li>
                     <a href="contatorm.html" id="contatoMenu" class="border">Contato</a>
@@ -91,6 +91,9 @@
            </form>
         </main>
     </section>
+
+
+    
     
 </body>
 </html>
