--- a/estruturafotos.html
+++ b/estruturafotos.html
@@ -16,7 +16,7 @@
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
  
      <!-- Arquivo JavaScript -->
-     <script src="../onlineGym/gymtech.js"  defer>
+     <script defer src="../onlineGym/gymtech.js">
  
      </script>
 </head>
@@ -49,7 +49,7 @@
                     
                 </li>
                 <li>
-                    <a href="index.html" class="border">Home</a>
+                    <a href="index.html" class="border" id="homeMenu">Home</a>
                 </li>
                 <li>
                     <a href="index.html" id="staffMenu" data-nome="staff" class="border borderStaff">Staff</a>
@@ -58,7 +58,7 @@
                     <a href="https://www.instagram.com/rmcentertraining"><img src="../onlineGym/imagens/rm-logo.png" alt=""></a>
                 </li>
                 <li>
-                    <a href="#" id="estruturafotos.html" class="border">Estrutura</a>
+                    <a href="#" id="estruturaMenu" class="border">Estrutura</a>
                 </li>
                 
                 <li>
@@ -78,9 +78,9 @@
             </div>
             <div id="imagemGrande">
                 <img src="" alt="" id="imgGrande">
-                <i class="fas fa-angle-double-left left"></i>
-                <i class="fas fa-angle-double-right right"></i>
-                <i class="far fa-window-close close"></i>
+                <i class="fas fa-angle-double-left left" id="left"></i>
+                <i class="fas fa-angle-double-right right" id="right"></i>
+                <i class="far fa-window-close close" id="close"></i>
 
             </div>
     </section>
