--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
     <h1>Nossos Horários</h1><hr class="hrcross">
     
-    <div class="flex">
+    <div id="caixaHorario" class="flex">
         <main id="horarioCross">        
             <img src="../onlineGym/imagens/horariocross.jpg" alt="">
         </main>
