--- a/estruturafotos.html
+++ b/estruturafotos.html
@@ -16,9 +16,9 @@
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
  
      <!-- Arquivo JavaScript -->
-     <script defer src="../onlineGym/gymtech.js">
- 
+     <script defer src="../onlineGym/home.js">
      </script>
+     <script defer src="../onlineGym/estrutura.js"></script>
 </head>
 <body id="nossaEstrutura">
 
