--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Icone De abas do navegador-->
     <link rel="icon" href="imagens/gym3.png">
 
-    <!-- Folha de estilo css -->
+    <!-- olha de estilo css -->
     <link rel="stylesheet" href="../onlineGym/gymtech.css">
 
     <!-- font awesome-->
@@ -52,7 +52,7 @@
             <li>
                 <a href="index.html" id="staffMenu" data-nome="staff" class="border borderStaff">Staff</a>
             </li>
-            <li>
+            <li id="bandeiraRm">
                 <a href="https://www.instagram.com/rmcentertraining"><img src="../onlineGym/imagens/rm-logo.png" alt=""></a>
             </li>
             <li>
