--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
     <nav id="navBar">
         <nav id="navLateral">
                <div>
-                   <a href="#">Home</a>
+                   <a href="index.html">Home</a>
                 </div>
                 <div>
-                    <a href="#">Staff</a>
+                    <a href="index.html">Staff</a>
                  </div>
                  <div>
-                    <a href="#">Estrutura</a>
+                    <a href="estruturafotos.html">Estrutura</a>
                  </div>
                  <div>
-                    <a href="#">Contato</a>
+                    <a href="contatorm.html">Contato</a>
                  </div>
         </nav>        
         <ul id="ulNav">
