--- a/estruturafotos.html
+++ b/estruturafotos.html
@@ -71,10 +71,19 @@
     <section id="estruturaFotos">
             <h1>Galeria de fotos</h1><hr class="hrcross">
             <div id="galeriaImagens">
-               <img src="../onlineGym/imagens/local.png" alt="" id="estruturaImg1">
-               <img src="../onlineGym/imagens/espaco2.jpg" alt="" id="estruturaImg2">
-               <img src="../onlineGym/imagens/vestiario.jpg" alt="" id="estruturaImg3">
-               <img src="../onlineGym/imagens/espaco6.jpg" alt="" id="estruturaImg4">
+                <img src="../onlineGym/imagens/local.png" alt="" id="estImg1">
+                <img src="../onlineGym/imagens/espaco2.jpg" alt="" id="estImg2">
+                <img src="../onlineGym/imagens/img4.jpg" alt="" id="estImg3">
+                <img src="../onlineGym/imagens/espaco6.jpg" alt="" id="estImg4">
+                <img src="../onlineGym/imagens/img1.jpg" alt="" id="estruturaImg5">
+                <img src="../onlineGym/imagens/img2.jpg" alt="" id="estruturaImg6">
+                <img src="../onlineGym/imagens/img3.jpg" alt="" id="estruturaImg7">
+                <img src="../onlineGym/imagens/img4.jpg" alt="" id="estruturaImg8">
+                <img src="../onlineGym/imagens/img5.jpg" alt="" id="estruturaImg9">
+                <img src="../onlineGym/imagens/img6.jpg" alt="" id="estruturaImg10">
+                <img src="../onlineGym/imagens/img7.jpg" alt="" id="estruturaImg11">
+                <img src="../onlineGym/imagens/img8.jpg" alt="" id="estruturaImg12">
+                <img src="../onlineGym/imagens/img9.jpg" alt="" id="estruturaImg13">
             </div>
             <div id="imagemGrande">
                 <img src="" alt="" id="imgGrande">
