--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <p>
             Nosso espaço é dividido em duas área,o primeiro espaço todo estruturado e voltado para as aulas de levantamento de peso,contamos com 6 plataformas e anilhas específicas voltadas para o levantamento de peso, para que possamos proporcionar uma melhor experiencia do levantamento de peso para nossos alunos,além de ter um segundo espaço voltado e equipado para as atividades de Crosstraining, tudo isso em um só lugar visando sempre a comodidade para os nossos alunos. 
         </p>
-        <a href="../onlineGym/estruturafotos.html" class="vejaMais">Veja mais</a>
+        <a href="../onlineGym/estruturafotos.html" class="vejaMais" id="vejaM" >Veja mais</a>
     </div>
 
     <div id="videoRose">
