--- a/estruturafotos.html
+++ b/estruturafotos.html
@@ -84,6 +84,11 @@
                 <img src="../onlineGym/imagens/img7.jpg" alt="" id="estruturaImg11">
                 <img src="../onlineGym/imagens/img8.jpg" alt="" id="estruturaImg12">
                 <img src="../onlineGym/imagens/img9.jpg" alt="" id="estruturaImg13">
+                <img src="../onlineGym/imagens/img13.jpg" alt="" id="estruturaImg14">
+                <img src="../onlineGym/imagens/img16.jpg" alt="" id="estruturaImg15">
+                <img src="../onlineGym/imagens/img7.jpg" alt="" id="estruturaImg16">
+                <img src="../onlineGym/imagens/img8.jpg" alt="" id="estruturaImg17">
+                <img src="../onlineGym/imagens/img9.jpg" alt="" id="estruturaImg18">
             </div>
             <div id="imagemGrande">
                 <img src="" alt="" id="imgGrande">
