--- a/estruturafotos.html
+++ b/estruturafotos.html
@@ -16,8 +16,6 @@
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
  
      <!-- Arquivo JavaScript -->
-     <script defer src="../onlineGym/home.js">
-     </script>
      <script defer src="../onlineGym/estrutura.js"></script>
 </head>
 <body id="nossaEstrutura">
@@ -25,18 +23,18 @@
     <header id="cabecalho">
         <nav id="navBar">
             <nav id="navLateral">
-                   <div>
-                       <a href="#">Home</a>
-                    </div>
-                    <div>
-                        <a href="#">Staff</a>
-                     </div>
-                     <div>
-                        <a href="#">Estrutura</a>
-                     </div>
-                     <div>
-                        <a href="#">Contato</a>
-                     </div>
+                <div>
+                    <a href="index.html">Home</a>
+                 </div>
+                 <div>
+                     <a href="index.html">Staff</a>
+                  </div>
+                  <div>
+                     <a href="estruturafotos.html">Estrutura</a>
+                  </div>
+                  <div>
+                     <a href="contatorm.html">Contato</a>
+                  </div>
             </nav>        
             <ul id="ulNav">
                 <li id="btnResponsivo">            
@@ -69,7 +67,7 @@
     </header>
 
     <section id="estruturaFotos">
-            <h1>Galeria de fotos</h1><hr class="hrcross">
+            <h1>Estrutura</h1><hr class="hrcross">
             <div id="galeriaImagens">
                 <img src="../onlineGym/imagens/local.png" alt="" id="estImg1">
                 <img src="../onlineGym/imagens/espaco2.jpg" alt="" id="estImg2">
@@ -86,9 +84,6 @@
                 <img src="../onlineGym/imagens/img9.jpg" alt="" id="estruturaImg13">
                 <img src="../onlineGym/imagens/img13.jpg" alt="" id="estruturaImg14">
                 <img src="../onlineGym/imagens/img16.jpg" alt="" id="estruturaImg15">
-                <img src="../onlineGym/imagens/img7.jpg" alt="" id="estruturaImg16">
-                <img src="../onlineGym/imagens/img8.jpg" alt="" id="estruturaImg17">
-                <img src="../onlineGym/imagens/img9.jpg" alt="" id="estruturaImg18">
             </div>
             <div id="imagemGrande">
                 <img src="" alt="" id="imgGrande">
