--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <p>
                         Mateus Filipe Gregório Machado (Viçosa, 5 de julho de 1993) é um halterofilista brasileiro que competiu na categoria até 105 kg do halterofilismo nos Jogos Olímpicos de Verão de 2016, no Rio de Janeiro.
                     </p>
-                    <a href="paginamateus.html">Veja mais</a>
+                    <a href="paginastaff.html">Veja mais</a>
                 </div>
             </div> 
             <div id="Rose">
@@ -137,7 +137,7 @@
                     <p>
                         Rosane dos Reis Santos (Rio de Janeiro, 20 de junho de 1987) é uma halterofilista olímpica brasileira. Representou o Brasil nos Jogos Olímpicos de Verão de 2016 na categoria até 54 quilos, competição no qual terminou em 5º lugar.
                     </p>
-                    <a href="paginarose.html">Veja mais</a>
+                    <a href="paginastaff.html">Veja mais</a>
                 </div>
             </div>
             
