--- a/paginarose.html
+++ b/paginarose.html
@@ -25,18 +25,18 @@
         <header id="cabecalho">
             <nav id="navBar">
                 <nav id="navLateral">
-                       <div>
-                           <a href="#">Home</a>
-                        </div>
-                        <div>
-                            <a href="#">Staff</a>
-                         </div>
-                         <div>
-                            <a href="#">Estrutura</a>
-                         </div>
-                         <div>
-                            <a href="#">Contato</a>
-                         </div>
+                    <div>
+                        <a href="index.html">Home</a>
+                     </div>
+                     <div>
+                         <a href="index.html">Staff</a>
+                      </div>
+                      <div>
+                         <a href="estruturafotos.html">Estrutura</a>
+                      </div>
+                      <div>
+                         <a href="contatorm.html">Contato</a>
+                      </div>
                 </nav>        
                 <ul id="ulNav">
                     <li id="btnResponsivo">            
