--- a/paginamateus.html
+++ b/paginamateus.html
@@ -80,9 +80,10 @@
             </div>
             <div id="topoMateusRight">
                  <h1>
-                     arranco  : 180kg 
-                     <br>
-                     arremesso : 240kg
+                     <span class="movimento">Arranco:</span><br> 180kg 
+                </h1>
+                <h1>
+                     <span class="movimento">Arremesso:</span><br> 240kg
                 </h1>
             </div>
 
