--- a/paginamateus.html
+++ b/paginamateus.html
@@ -16,8 +16,8 @@
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   
       <!-- Arquivo JavaScript -->
-      <script>
-  
+      <script src="../onlineGym/paginamateus.js" defer>
+          
       </script>
 </head>
  <body id="bodyMateus">
