--- a/paginamateus.html
+++ b/paginamateus.html
@@ -74,9 +74,15 @@
                     <br>
                     Gregório
                 </h1>
+                <div id="topoMateusSetaEsquerda">
+                    <a href="paginarose.html">
+                    <i class="fas fa-angle-double-left" id="left"></i>
+                    </a>
+                </div>
             </div>
             <div id="topoMateusCenter">
                 <a href="https://www.instagram.com/mateus.olympic/"><img src="../onlineGym/imagens/mateuzao.jpg" alt=""></a>
+               
             </div>
             <div id="topoMateusRight">
                  <h1>
@@ -85,6 +91,11 @@
                 <h1>
                      <span class="movimento">Arremesso:</span><br> 240kg
                 </h1>
+                <div id="topoMateusSetaDireita">
+                    <a href="paginarose.html">
+                    <i class="fas fa-angle-double-right" id="right"></i>
+                    </a>
+                </div>
             </div>
 
         </section>
