--- a/paginarose.html
+++ b/paginarose.html
@@ -16,7 +16,7 @@
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   
       <!-- Arquivo JavaScript -->
-      <script src="../onlineGym/gymtech.js"  defer>
+      <script src="paginarose.js"  defer>
   
       </script>
 </head>
@@ -80,9 +80,9 @@
             </div>
             <div id="topoRoseRight">
                  <h1>
-                     arranco  : 100kg 
+                     arranco: 100kg 
                      <br>
-                     arremesso : 120kg
+                     arremesso: 120kg
                 </h1>
             </div>
 
