--- a/estruturafotos.html
+++ b/estruturafotos.html
@@ -27,7 +27,7 @@
                     <a href="index.html">Home</a>
                  </div>
                  <div>
-                     <a href="index.html">Staff</a>
+                     <a href="paginamateus.html">Staff</a>
                   </div>
                   <div>
                      <a href="estruturafotos.html">Estrutura</a>
@@ -73,17 +73,17 @@
                 <img src="../onlineGym/imagens/espaco2.jpg" alt="" id="estImg2">
                 <img src="../onlineGym/imagens/img4.jpg" alt="" id="estImg3">
                 <img src="../onlineGym/imagens/espaco6.jpg" alt="" id="estImg4">
-                <img src="../onlineGym/imagens/img1.jpg" alt="" id="estruturaImg5">
-                <img src="../onlineGym/imagens/img2.jpg" alt="" id="estruturaImg6">
-                <img src="../onlineGym/imagens/img3.jpg" alt="" id="estruturaImg7">
-                <img src="../onlineGym/imagens/img4.jpg" alt="" id="estruturaImg8">
-                <img src="../onlineGym/imagens/img5.jpg" alt="" id="estruturaImg9">
-                <img src="../onlineGym/imagens/img6.jpg" alt="" id="estruturaImg10">
-                <img src="../onlineGym/imagens/img7.jpg" alt="" id="estruturaImg11">
-                <img src="../onlineGym/imagens/img8.jpg" alt="" id="estruturaImg12">
-                <img src="../onlineGym/imagens/img9.jpg" alt="" id="estruturaImg13">
-                <img src="../onlineGym/imagens/img13.jpg" alt="" id="estruturaImg14">
-                <img src="../onlineGym/imagens/img16.jpg" alt="" id="estruturaImg15">
+                <img src="../onlineGym/imagens/img1.jpg" alt="" id="estImg5">
+                <img src="../onlineGym/imagens/img2.jpg" alt="" id="estImg6">
+                <img src="../onlineGym/imagens/img3.jpg" alt="" id="estImg7">
+                <img src="../onlineGym/imagens/img4.jpg" alt="" id="estImg8">
+                <img src="../onlineGym/imagens/img5.jpg" alt="" id="estImg9">
+                <img src="../onlineGym/imagens/img6.jpg" alt="" id="estImg10">
+                <img src="../onlineGym/imagens/img7.jpg" alt="" id="estImg11">
+                <img src="../onlineGym/imagens/img8.jpg" alt="" id="estImg12">
+                <img src="../onlineGym/imagens/img9.jpg" alt="" id="estImg13">
+                <img src="../onlineGym/imagens/img13.jpg" alt="" id="estImg14">
+                <img src="../onlineGym/imagens/img16.jpg" alt="" id="estImg15">
             </div>
             <div id="imagemGrande">
                 <img src="" alt="" id="imgGrande">
