--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                    <a href="index.html">Home</a>
                 </div>
                 <div>
-                    <a href="index.html">Staff</a>
+                    <a href="paginamateus.html">Staff</a>
                  </div>
                  <div>
                     <a href="estruturafotos.html">Estrutura</a>
