--- a/paginarose.html
+++ b/paginarose.html
@@ -20,7 +20,7 @@
   
       </script>
 </head>
-<body id="bioRose">
+<body id="bodyRose">
     <header id="cabecalho">
         <nav id="navBar">
             <nav id="navLateral">
@@ -28,7 +28,7 @@
                        <a href="index.html">Home</a>
                     </div>
                     <div>
-                        <a href="index.html">Staff</a>
+                        <a href="paginamateus.html">Staff</a>
                      </div>
                      <div>
                         <a href="estruturafotos.html">Estrutura</a>
@@ -74,16 +74,27 @@
                     <br>
                     Santos
                 </h1>
+                <div id="topoRoseSetaEsquerda">
+                    <a href="paginamateus.html">
+                    <i class="fas fa-angle-double-left" id="left"></i>
+                    </a>
+                </div>
             </div>
             <div id="topoRoseCenter">
                 <a href="https://www.instagram.com/rosepeso/"><img src="../onlineGym/imagens/rosepeso.jpg" alt=""></a>
             </div>
             <div id="topoRoseRight">
-                 <h1>
-                     arranco: 100kg 
-                     <br>
-                     arremesso: 120kg
-                </h1>
+                <h1>
+                    <span class="movimento">Arranco:</span><br> 102kg 
+               </h1>
+               <h1>
+                    <span class="movimento">Arremesso:</span><br> 120kg
+               </h1>
+               <div id="topoRoseSetaDireita">
+                   <a href="paginamateus.html">
+                   <i class="fas fa-angle-double-right" id="right"></i>
+                   </a>
+               </div>
             </div>
 
         </section>
@@ -95,7 +106,7 @@
                 Biografia
             </h1>
             <p>
-                Rosane dos Reis Santos (Rio de Janeiro, 20 de junho de 1987) é uma halterofilista olímpica brasileira. Representou o Brasil nos Jogos Olímpicos de Verão de 2016 na categoria até 54 quilos, competição no qual terminou em 5º lugar. <a class="maisInfo" href="https://pt.wikipedia.org/wiki/Rosane_Santos">Mais informações</a>
+                Rosane dos Reis Santos (Rio de Janeiro, 20 de junho de 1987) é uma halterofilista olímpica brasileira. Representou o Brasil nos Jogos Olímpicos de Verão de 2016 na categoria até 59 quilos, competição no qual terminou em 5º lugar. <a class="maisInfo" href="https://pt.wikipedia.org/wiki/Rosane_Santos">Mais informações</a>
             </p>
             <hr class="hr">
             <div id="curiosidadesSobre">
