--- a/paginamateus.html
+++ b/paginamateus.html
@@ -28,7 +28,7 @@
                        <a href="index.html">Home</a>
                     </div>
                     <div>
-                        <a href="index.html">Staff</a>
+                        <a href="paginamateus.html">Staff</a>
                      </div>
                      <div>
                         <a href="estruturafotos.html">Estrutura</a>
