--- a/contatorm.html
+++ b/contatorm.html
@@ -49,7 +49,7 @@
                     <a href="index.html" class="border">Home</a>
                 </li>
                 <li>
-                    <a href="index.html" id="staffMenu" data-nome="staff" class="border borderStaff">Staff</a>
+                    <a href="paginamateus.html" id="staffMenu" data-nome="staff" class="border borderStaff">Staff</a>
                 </li>
                 <li>
                     <a href="https://www.instagram.com/rmcentertraining"><img src="../onlineGym/imagens/rm-logo.png" alt=""></a>
