--- a/paginamateus.html
+++ b/paginamateus.html
@@ -51,13 +51,13 @@
                     <a href="index.html" id="homeMenu" class="border">Home</a>
                 </li>
                 <li>
-                    <a href="index.html" id="staffMenu" data-nome="staff" class="border borderStaff">Staff</a>
+                    <a href="paginamateus.html" id="staffMenu" data-nome="staff" class="border borderStaff">Staff</a>
                 </li>
                 <li id="bandeiraRm">
                     <a href="https://www.instagram.com/rmcentertraining"><img src="../onlineGym/imagens/rm-logo.png" alt=""></a>
                 </li>
                 <li>
-                    <a href="#" id="estruturaMenu" class="border">Estrutura</a>
+                    <a href="estruturafotos.html" id="estruturaMenu" class="border">Estrutura</a>
                 </li>
                 
                 <li>
