--- a/estruturafotos.html
+++ b/estruturafotos.html
@@ -50,7 +50,7 @@
                     <a href="index.html" class="border" id="homeMenu">Home</a>
                 </li>
                 <li>
-                    <a href="index.html" id="staffMenu" data-nome="staff" class="border borderStaff">Staff</a>
+                    <a href="paginamateus.html" id="staffMenu" data-nome="staff" class="border borderStaff">Staff</a>
                 </li>
                 <li>
                     <a href="https://www.instagram.com/rmcentertraining"><img src="../onlineGym/imagens/rm-logo.png" alt=""></a>
