--- a/paginamateus.html
+++ b/paginamateus.html
@@ -107,14 +107,14 @@
                 Biografia
             </h1>
             <p>
-                Mateus Filipe Gregório Machado (Viçosa, 5 de julho de 1993) é um halterofilista brasileiro que competiu na categoria até 105 kg do halterofilismo nos Jogos Olímpicos de Verão de 2016, no Rio de Janeiro. <a class="maisInfo" href="https://pt.wikipedia.org/wiki/Mateus_Greg%C3%B3rio">Mais informações</a>
+                Mateus Filipe Gregório Machado (Viçosa, 5 de julho de 1993) é um halterofilista brasileiro que competiu na categoria até 109 kg do halterofilismo nos Jogos Olímpicos de Verão de 2016, no Rio de Janeiro,tendo destaque 2 lugar sul-americano Chile 2014 e pan-americano toronto 2015 no Canadá e campeao brasileiro. <a class="maisInfo" href="https://pt.wikipedia.org/wiki/Mateus_Greg%C3%B3rio">Mais informações</a>
             </p>
             <hr class="hr">
             <div id="curiosidadesSobre">
                 <div class="centralizar">
                    <h2>Categoria:</h2><br>
                    <i class="fas fa-weight"></i><br>
-                   <p>102kg+</p>
+                   <p>109kg</p>
                 </div> 
                 
                 <div class="centralizar">
@@ -125,17 +125,17 @@
                 <div class="centralizar">
                     <h2>Data de nascimento:</h2> <br>
                     <i class="fas fa-birthday-cake"></i><br>
-                     <p>28/08/1993</p>
+                     <p>05/07/1993</p>
                 </div>
                 <div class="centralizar">
                     <h2>Primeira convocação:</h2> <br>
                     <img src="../onlineGym/imagens/brazil.jpg" alt=""><br>
-                    <p>28/08/1993</p>
+                    <p>05/07/1993</p>
                 </div>
                 <div class="centralizar">
                     <h2>Primeiro feito internacional:</h2><br>
                     <i class="fas fa-medal"></i><br>
-                    <p> Campeonato sul-americano 2015 </p>
+                    <p> 2 lugar sul-americano 2014 </p>
 
                 </div>
                 <div class="centralizar">
