--- a/paginarose.html
+++ b/paginarose.html
@@ -106,14 +106,14 @@
                 Biografia
             </h1>
             <p>
-                Rosane dos Reis Santos (Rio de Janeiro, 20 de junho de 1987) é uma halterofilista olímpica brasileira. Representou o Brasil nos Jogos Olímpicos de Verão de 2016 na categoria até 59 quilos, competição no qual terminou em 5º lugar. <a class="maisInfo" href="https://pt.wikipedia.org/wiki/Rosane_Santos">Mais informações</a>
+                Rosane Santos (Rio de Janeiro, 20 de junho de 1987) é uma halterofilista olímpica brasileira. Representou o Brasil nos Jogos Olímpicos de Verão de 2016 na categoria até 59kg, competição no qual terminou em 5º lugar.Consagrada melhor atleta do Brasil no prêmio olímpico 2009,8 lugar no mundial da Polônia 2013,2 lugar jogos sul-americano chile 2014,foi a primeira atleta brasileira feminina a ser medalhista de ouro pan-americano 2017. <a class="maisInfo" href="https://pt.wikipedia.org/wiki/Rosane_Santos">Mais informações</a>
             </p>
             <hr class="hr">
             <div id="curiosidadesSobre">
                 <div class="centralizar">
                    <h2>Categoria:</h2><br>
                    <i class="fas fa-weight"></i><br>
-                   <p>102kg+</p>
+                   <p>55kg</p>
                 </div> 
                 
                 <div class="centralizar">
@@ -124,7 +124,7 @@
                 <div class="centralizar">
                     <h2>Data de nascimento:</h2> <br>
                     <i class="fas fa-birthday-cake"></i><br>
-                     <p>28/08/1993</p>
+                     <p>20/06/1987</p>
                 </div>
                 <div class="centralizar">
                     <h2>Primeira convocação:</h2> <br>
@@ -134,7 +134,7 @@
                 <div class="centralizar">
                     <h2>Primeiro feito internacional:</h2><br>
                     <i class="fas fa-medal"></i><br>
-                    <p> Campeonato sul-americano 2015 </p>
+                    <p> Campeonato mundial Polônia 2013 </p>
 
                 </div>
                 <div class="centralizar">
