--- a/estruturafotos.html
+++ b/estruturafotos.html
@@ -67,7 +67,7 @@
     </header>
 
     <section id="estruturaFotos">
-            <h1>Estrutura</h1><hr class="hrcross">
+            <h1 id="estruturaH1">Estrutura</h1><hr class="hrcross">
             <div id="galeriaImagens">
                 <img src="../onlineGym/imagens/local.png" alt="" id="estImg1">
                 <img src="../onlineGym/imagens/espaco2.jpg" alt="" id="estImg2">
